# HamzaPipeSim

./: .pre-commit-config.yaml  CMakeLists.txt  GUI_PyQt5.py  README.md  auto_fix_bindings.py  clean_rebuild.py  complete_demo.py  conteribution.md  devlog.md  diagnose_pyd_loading.py  diagnose_test.py  diagnostic_solver.py  elevation_profile_example.py  extract_links.py  final_working_fix.py  fix.py  fix_import.py  fix_setup_unicode.py  gitHUB.txt  grokexample.py  immediate_dll_fix.py  junk.txt  ml_integration_part1.cpp  network_visualization.py  pipeline_sim.cp313-win_amd64.pyd  pipeline_sim.pyd  pipeline_sim_import.pyi  pipeline_sim_loader.py  pipline_xample.py  professional_test.py  professional_test_fixed.py  professional_test_new.py  professional_validation_example.py  python fix_pyd_loading.py  python_solver_wrapper.py  requirements-dev.txt  requirements.txt  settings.json  setup.py  setup_complete.py  (+7 more)
benchmarks/: benchmark_solver.cpp
core/: CMakeLists.txt
core/include/pipeline_sim/: correlations.h  equipment.h  fluid_properties.h  ml_integration.h  ml_integration.h.backup  network.h  node.h  pipe.h  pipeline_sim.h  solver.backup_20250628_204033.h  solver.h  transient_solver.backup_20250628_204033.h  transient_solver.h  types.h  utils.h
core/src/: correlations.cpp  equipment.cpp  fluid_properties.cpp  ml_integration.cpp  ml_integration.cpp.backup  ml_integration.cpp.original_backup  network.cpp  node.cpp  pipe.cpp  solver.backup_20250628_204033.cpp  solver.cpp  solver.cpp.backup  transient_solver.backup_20250628_204033.cpp  transient_solver.cpp  transient_solver.cpp.backup_20250628_204955  transient_solver_stub.cpp  utils.cpp
core/tests/: CMakeLists.txt  test_correlations.cpp  test_network.cpp
examples/: digital_twin_demo.py  oil_field_network.py  pipeline_optimization.py  simple_network.json
monitoring/: realtime_dashboard.py
newExamples/: example1.py  example2.py
python/: pipeline_sim.cp313-win_amd64.pyd
python/examples/: basic_simulation.py  multiphase_flow.py  network_from_json.py
python/pipeline_sim/: __init__.py
python/pipeline_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/: bindings.cpp  bindings.cpp.backup_20250628_205525  bindings.cpp.backup_20250628_205713  bindings_auto_fixed.cpp  bindings_fixed.cpp  bindings_minimal.cpp
python/tests/: conftest.py  test_correlations.py  test_equipment.py  test_ml_integration.py  test_network.py  test_transient.py
tools/cli/: pipeline_sim_cli.py
tools/gui/: pipeline_sim_gui.py
